--- a/光流法/光流法.vcxproj.filters
+++ b/光流法/光流法.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="稠密光流法示例.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="PictureGetter.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PictureGetter.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
