更改资源文件位置

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -168,6 +168,11 @@
     <ClCompile Include="gui.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="scrollbar.xml">
+      <DeploymentContent>true</DeploymentContent>
+    </Xml>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
